[PRMT-4677] - Replaced List.of() with Collections.singletonList()