@@ -9,7 +9,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.jms.config.DefaultJmsListenerContainerFactory;
 
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class ActiveMQConfig {
@@ -43,7 +43,7 @@ public class ActiveMQConfig {
     @Bean
     public ConnectionFactory connectionFactory() {
         ActiveMQConnectionFactory activeMQConnectionFactory = new ActiveMQConnectionFactory();
-        activeMQConnectionFactory.setTrustedPackages(List.of("uk.nhs.prm.repo.ehrtransferservice"));
+        activeMQConnectionFactory.setTrustedPackages(Collections.singletonList("uk.nhs.prm.repo.ehrtransferservice"));
         activeMQConnectionFactory.setBrokerURL(failoverUrl());
         activeMQConnectionFactory.setPassword(brokerPassword);
         activeMQConnectionFactory.setUserName(brokerUsername);
